syntax = "proto3";
package ppos_storage;


message CandidateTemp {

}

message TicketTemp {

}


message PPOSTemp {
  CandidateTemp   CanTmp = 1;
  TicketTemp      TickTmp = 2;
}


// k2 blockHash
message BlockHashPPOSTemp {
  map<string, PPOSTemp> PposStorage = 1;
}

// k1 blockNumber
message BlockNumberPPOSTemp {
  uint32  BlockCount = 1;
  map<string, BlockHashPPOSTemp> HashTemp = 2;
}




message TicketIds {
  repeated bytes TicketId = 1;
}

message NodeTicketIds {
  map<string, TicketIds> NTickets = 1;
}

message BlockNodes {
  map<string, NodeTicketIds> BNodes = 1;
}

message NumBlocks {
  map<string, BlockNodes> NBlocks = 1;
  uint32  BlockCount  = 2;
}

message SortCalcHash {
  repeated string Nodeids = 1;
  repeated TicketIds Tids = 2;
}